# Notch_EMT

./: .[1.0, 1.0, 1.0, 0.41, 0.61, 16.0, 0.0, 11.0, 16.0, 1.0, 1.0, 0.3, 0.0, 2.0943951023931953]phase_anim_critical.gif.icloud  .bashrc  .gitignore  .phase_anim_critical.gif.icloud  .prc2_0.3~0.4_amp_100_id(49,592).gif.icloud  .prc2_0.3~0.4_amp_300_id(49,592).gif.icloud  CLAUDE.md  COMPREHENSIVE_ANALYSIS.md  Functions.jl  Manifest.toml  PRC2_BOUNDARY_LIMITATION_ANALYSIS.md  Project.toml  README.md  main4_postive_discrete_pulse.jl  main5_complete_pulses.jl  main5_functions.jl  pyproject.toml  record.md
.CondaPkg/: lock 2  meta
HC_env/: Manifest.toml  Notch_epi_HC.jl  Project.toml
Notch.old/: NOTCH.jl
Notch_Epi/: Manifest.toml  Notch_epi(catalyst_version).jl  Notch_epi.jl  Notch_param_run_bg.jl  Project.toml  Search_params.jl  Untitled.ipynb  vis_params.jl
Others/: Manifest.toml  Notch_param_core_space_size.jl  Notch_param_run_bg.jl  Notch_parameter_space_vis.py  Project.toml  db.csv  db_complete.csv  functions.jl
Pluto_nb/: histone_model.jl  histone_model_rd.jl
SciML_Notch/: Manifest.toml  Project.toml  example1.jl
docs/: COMPREHENSIVE_DOCUMENTATION.md  ModelingToolkit_Migration_Guide.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  USER_GUIDE.md
parameter_generation/: Notch_param_space_size.jl  Search_params.jl
src/: Functions.jl  Makie_plots.jl  Notch_EMT_paper.jl  main4_positive_discrete_pulse_NOuse_code.jl  main4_postive_discrete_pulse.jl
tests/: README.md  test_data_access.jl  test_db_loading.jl  test_model_behavior.jl  test_paper_generation.jl  (+3 more)
(+443 files in other folders)
